[shenker/matriarch] Cleaned up matriarch env.yml, removed old root-level gitignore from old repo.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/environment.yml
@@ -1,202 +1,31 @@
 name: matriarch
 channels:
-  - bokeh/channel/dev
-  - holoviews/label/dev
-  - pyviz/label/dev
+  - pyviz
   - conda-forge
   - defaults
 dependencies:
-  - apsw=3.25.2.r1=py36h6b74fdf_1000
-  - arrow-cpp=0.12.1=py36h0e61e49_0
-  - asciitree=0.3.3=py_2
-  - asn1crypto=0.24.0=py36_1003
-  - attrs=19.1.0=py_0
-  - backcall=0.1.0=py_0
-  - bleach=3.1.0=py_0
-  - blosc=1.16.3=he1b5a44_1
-  - bokeh=1.2.1dev1=py_0
-  - boost-cpp=1.68.0=h11c811c_1000
-  - brotli=1.0.7=he1b5a44_1000
-  - bzip2=1.0.6=h14c3975_1002
-  - ca-certificates=2019.6.16=hecc5488_0
-  - cachetools=3.1.1=py_0
-  - certifi=2019.3.9=py36_0
-  - cffi=1.12.3=py36h8022711_0
-  - chardet=3.0.4=py36_1003
-  - click=7.0=py_0
-  - cloudpickle=1.2.1=py_0
-  - colorcet=2.0.1=py_0
-  - cryptography=2.7=py36h72c5cf5_0
-  - cycler=0.10.0=py_1
-  - cython=0.29.10=py36he1b5a44_0
-  - cytoolz=0.9.0.1=py36h14c3975_1001
-  - dask-core=1.2.2=py_0
-  - dask-jobqueue=0.4.1=py_0
-  - dask=1.2.2=py_3
-  - datashader=0.7.0=py_0
-  - datashape=0.5.4=py_1
-  - dbus=1.13.6=he372182_0
-  - decorator=4.4.0=py_0
-  - defusedxml=0.5.0=py_1
-  - distributed=1.28.1=py36_0
-  - docrep=0.2.7=py_0
-  - entrypoints=0.3=py36_1000
-  - expat=2.2.5=hf484d3e_1002
-  - fasteners=0.14.1=py_3
-  - filelock=3.0.10=py_0
-  - fontconfig=2.13.1=he4413a7_1000
-  - freetype=2.10.0=he983fc9_0
-  - future=0.17.1=py36_1000
-  - futures-compat=1.0=py3_0
-  - gettext=0.19.8.1=hc5be6a0_1002
-  - gflags=2.2.2=he1b5a44_1001
-  - glib=2.58.3=h6f030ca_1001
-  - glog=0.4.0=he1b5a44_1
-  - gst-plugins-base=1.14.5=h0935bb2_0
-  - gstreamer=1.14.5=h36ae1b5_0
-  - heapdict=1.0.0=py36_1000
-  - holoviews=1.12.3=py_0
-  - hvplot=0.4.0=py_0
-  - icu=58.2=hf484d3e_1000
-  - idna=2.8=py36_1000
-  - imageio=2.5.0=py36_0
-  - ipykernel=5.1.1=py36h24bf2e0_0
-  - ipython=7.5.0=py36h24bf2e0_0
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.4.2=py_0
-  - jedi=0.13.3=py36_0
-  - jinja2=2.10.1=py_0
-  - joblib=0.13.2=py_0
-  - jpeg=9c=h14c3975_1001
-  - jsonschema=3.0.1=py36_0
-  - jupyter_client=5.2.4=py_3
-  - jupyter_core=4.4.0=py_0
-  - jupyterlab=0.35.6=py36_0
-  - jupyterlab_server=0.2.0=py_0
-  - kiwisolver=1.1.0=py36hc9558a2_0
-  - libblas=3.8.0=10_openblas
-  - libcblas=3.8.0=10_openblas
-  - libffi=3.2.1=he1b5a44_1006
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgcc=7.2.0=h69d50b8_2
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libiconv=1.15=h516909a_1005
-  - liblapack=3.8.0=10_openblas
-  - libpng=1.6.37=hed695b0_0
-  - libprotobuf=3.6.1=hdbcaa40_1001
-  - libsodium=1.0.16=h14c3975_1001
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.0.10=h57b8799_1003
-  - libuuid=2.32.1=h14c3975_1000
-  - libxcb=1.13=h14c3975_1002
-  - libxml2=2.9.9=h13577e0_0
-  - line_profiler=2.1.2=py36h14c3975_1002
-  - llvmlite=0.28.0=py36hdbcaa40_0
-  - lmdb=0.9.23=h14c3975_1000
-  - locket=0.2.0=py_2
-  - lz4-c=1.8.3=he1b5a44_1001
-  - markdown=2.6.11=py_0
-  - markupsafe=1.1.1=py36h14c3975_0
-  - matplotlib-base=3.1.0=py36hfd891ef_1
-  - matplotlib=3.1.0=py36_1
-  - memory_profiler=0.55.0=py_0
-  - mistune=0.8.4=py36h14c3975_1000
-  - monotonic=1.5=py_0
-  - msgpack-python=0.6.1=py36h6bb024c_0
-  - multipledispatch=0.6.0=py_0
-  - nbconvert=5.5.0=py_0
-  - nbformat=4.4.0=py_1
-  - ncurses=6.1=hf484d3e_1002
-  - networkx=2.3=py_0
-  - nodejs=9.11.1=0
-  - notebook=5.7.8=py36_1
-  - numba=0.43.1=py36hf2d7682_0
-  - numcodecs=0.6.3=py36hf484d3e_0
-  - numpy-indexed=0.3.5=py_1
-  - numpy=1.16.4=py36h95a1406_0
-  - olefile=0.46=py_0
-  - openblas=0.3.6=h6e990d7_1
-  - openssl=1.1.1b=h14c3975_1
-  - packaging=19.0=py_0
-  - pandas=0.24.2=py36hb3f55d8_0
-  - pandoc=2.7.3=0
-  - pandocfilters=1.4.2=py_1
-  - panel=0.6.0=py_0
-  - param=1.9.1=py_0
-  - parquet-cpp=1.5.1=4
-  - parso=0.4.0=py_0
-  - partd=0.3.10=py_1
-  - pcre=8.41=hf484d3e_1003
-  - peakutils=1.3.2=py_0
-  - pexpect=4.7.0=py36_0
-  - pickleshare=0.7.5=py36_1000
-  - pillow=6.0.0=py36he7afcd5_0
-  - pip:
-      - deepmerge==0.0.5
-      - pims==0.4.1
-      - slicerator==1.0.0
-      - xmltodict==0.12.0
-  - pip=19.1.1=py36_0
-  - prometheus_client=0.7.0=py_0
-  - prompt_toolkit=2.0.9=py_0
-  - psutil=5.6.3=py36h516909a_0
-  - pthread-stubs=0.4=h14c3975_1001
-  - ptyprocess=0.6.0=py_1001
-  - pyarrow=0.12.1=py36hbbcf98d_0
-  - pycparser=2.19=py36_1
-  - pyct-core=0.4.6=py_0
-  - pyct=0.4.6=py_0
-  - pygments=2.4.2=py_0
-  - pyopenssl=19.0.0=py36_0
-  - pyparsing=2.4.0=py_0
-  - pyqt=5.9.2=py36hcca6a23_0
-  - pyrsistent=0.15.2=py36h516909a_0
-  - pysocks=1.7.0=py36_0
-  - python-dateutil=2.8.0=py_0
-  - python-lmdb=0.92=py36_0
-  - python=3.6.7=h381d211_1004
-  - pytz=2019.1=py_0
-  - pyviz_comms=0.7.2=py_0
-  - pywavelets=1.0.3=py36hd352d35_1
-  - pyyaml=5.1.1=py36h516909a_0
-  - pyzmq=18.0.1=py36hc4ba49a_1
-  - qgrid=1.1.1=py36_1001
-  - qt=5.9.7=h52cfd70_2
-  - re2=2019.06.01=he1b5a44_0
-  - readline=7.0=hf8c457e_1001
-  - requests=2.22.0=py36_0
-  - scikit-learn=0.21.2=py36h627018c_0
-  - scipy=1.3.0=py36h921218d_0
-  - send2trash=1.5.0=py_0
-  - setuptools=41.0.1=py36_0
-  - sip=4.19.8=py36hf484d3e_1000
-  - six=1.12.0=py36_1000
-  - snappy=1.1.7=he1b5a44_1002
-  - sortedcontainers=2.1.0=py_0
-  - sqlite=3.28.0=h8b20d00_0
-  - streamz=0.5.1=py_0
-  - tblib=1.4.0=py_0
-  - terminado=0.8.2=py36_0
-  - testpath=0.4.2=py_1001
-  - thrift-cpp=0.12.0=h0a07b25_1002
-  - tk=8.6.9=hed695b0_1002
-  - toolz=0.9.0=py_1
-  - tornado=6.0.2=py36h516909a_0
-  - tqdm=4.32.1=py_0
-  - traitlets=4.3.2=py36_1000
-  - urllib3=1.24.3=py36_0
-  - wcwidth=0.1.7=py_1
-  - webencodings=0.5.1=py_1
-  - wheel=0.33.4=py36_0
-  - widgetsnbextension=3.4.2=py36_1000
-  - wrapt=1.11.2=py36h516909a_0
-  - xarray=0.12.1=py_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
-  - xz=5.2.4=h14c3975_1001
-  - yaml=0.1.7=h14c3975_1001
-  - zarr=2.3.2=py36_0
-  - zeromq=4.3.1=hf484d3e_1000
-  - zict=0.1.4=py_0
-  - zlib=1.2.11=h14c3975_1004
-  - zstd=1.4.0=h3b9ef0a_0
+  - bokeh
+  - cachetools
+  - click
+  - dask
+  - dask-jobqueue
+  - datashader
+  - filelock
+  - holoviews
+  - ipython
+  - ipywidgets
+  - matplotlib
+  - nd2reader
+  - numba
+  - numcodecs
+  - numpy
+  - numpy-indexed
+  - pandas
+  - peakutils
+  - pyarrow
+  - qgrid
+  - scikit-image
+  - scikit-learn
+  - scipy
+  - tornado
+  - zarr
