[shenker/cloning,cloning] As used on 210420 and 210422 to design primers which flip the orientation of the 3G insert relative to the backbone.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - click
   - clustalo
   - cytoolz
+  - frozendict
   - google-api-python-client
   - holoviews
   - hvplot
@@ -42,4 +43,5 @@ dependencies:
   - seaborn
   - tatsu
   - tqdm
+  - viennarna
   - xlrd
