[deaton] Big push.

--- a/paulssonlab/src/paulssonlab/deaton/nanopore/environment.yml
+++ b/paulssonlab/src/paulssonlab/deaton/nanopore/environment.yml
@@ -6,6 +6,9 @@ channels:
 dependencies:
   - biopython
   - black
+  - dask
+  - dask-jobqueue
+  - distributed
   - graphaligner
   - jupyterlab
   - matplotlib
