--- a/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/environment.yml
+++ b/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/environment.yml
@@ -1,27 +1,38 @@
-name: trenchripper
+name: crispri
 channels:
+  - pyviz
   - conda-forge
+  - bioconda
   - pytorch
   - defaults
 dependencies:
+  - biopython
+  - black
   - bokeh
+  - cairo
+  - cellrank
   - cudatoolkit=10.2
   - dask
   - dask-jobqueue
   - dask-ml
   - datashader
   - distributed
+  - dna_features_viewer
   - fastparquet
+  - goatools
   - h5py
   - holoviews
   - imgaug
   - ipympl
   - ipywidgets
   - jupyterlab
-  - kmodes
+  - jupyterlab_code_formatter
+  - leidenalg
   - line_profiler
   - matplotlib
+  - minimap2
   - nd2reader
+  - networkx
   - nodejs
   - numpy
   - pandas
@@ -30,15 +41,20 @@ dependencies:
       - pulp
       - parse
       - h5py-cache
+  - pre-commit
+  - pycairo
   - pytables
   - python=3.8.5
   - pytorch
   - qgrid
+  - scanpy
   - scikit-image
   - scikit-learn
   - scipy
+  - scvelo
   - seaborn
   - statsmodels
   - tifffile
   - torchvision
   - tslearn
+  - umap-learn
