[api,shenker/cloning] dump_geneious done for SeqRecords. Added fuzzy interval handling, reference author splitting, genbank ID handling, and a couple other small metadata handling tweaks.Please enter the commit message for your changes. Lines starting

--- a/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - cachetools
   - click
   - clustalo
+  - cockroachdb-python
   - cytoolz
   - frozendict
   - google-api-python-client
@@ -38,9 +39,11 @@ dependencies:
       - requests-html
       - pygsheets
       - pyppeteer
+  - psycopg2
   - pytoml
   - requests
   - seaborn
+  - sqlalchemy
   - tatsu
   - tqdm
   - viennarna
