--- a/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
@@ -20,6 +20,7 @@ dependencies:
   - jsondiff
   - jupyterlab
   - jupyterlab_code_formatter
+  - libxml2=2.9.10
   - mafft
   - matplotlib
   - natsort
@@ -32,17 +33,16 @@ dependencies:
   - pip
   - pip:
       - benchlingapi
-      - dnachisel
       - escapejson
-      - primer3-py
       - primer3plus
-      - requests-html
       - pygsheets
-      - pyppeteer
       - sqlalchemy-cockroachdb
+  - primer3-py
   - psycopg2
+  - pyppeteer
   - pytoml
   - requests
+  - requests-html
   - seaborn
   - sqlalchemy
   - tatsu
