--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,11 +5,11 @@ repos:
     hooks:
     -   id: docformatter
 -   repo: https://github.com/psf/black
-    rev: 20.8b1
+    rev: 22.3.0
     hooks:
     -   id: black
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
+    rev: v4.1.0
     hooks:
     -   id: check-added-large-files
         exclude: '\.ipynb$'
@@ -18,6 +18,7 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-merge-conflict
+    -   id: check-case-conflict
 -   repo: https://github.com/shenker/pre-commit-hooks.git
     rev: 87cc13a9113b48feb5f26bb9be17376e19d8b00b
     hooks:
