--- a/.gitignore
+++ b/.gitignore
@@ -148,7 +148,7 @@ __pycache__/
 #wheels/
 #pip-wheel-metadata/
 #share/python-wheels/
-#*.egg-info/
+*.egg-info/
 #.installed.cfg
 #*.egg
 #MANIFEST
