--- a/paulssonlab/src/paulssonlab/image_analysis/environment.yml
+++ b/paulssonlab/src/paulssonlab/image_analysis/environment.yml
@@ -1,6 +1,5 @@
 name: image_analysis
 channels:
-  - pyviz
   - conda-forge
   - defaults
 dependencies:
@@ -22,12 +21,11 @@ dependencies:
   - numpy
   - numpy-indexed
   - pandas
-  - panel=0.12.7
+  - panel
   - py-opencv
   - pyarrow
   - pytables
   - python-lmdb
-  - qgrid
   - scikit-image
   - scikit-learn
   - scipy
