Mosaic animations for Noah's qbio talk on 230222. Added rotation to mosaic. Fixed bug in display_image. Removed memmap kwarg from ND2 reader functions.

--- a/paulssonlab/src/paulssonlab/image_analysis/environment.yml
+++ b/paulssonlab/src/paulssonlab/image_analysis/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - black
   - bokeh
   - cachetools
   - click
@@ -15,6 +16,7 @@ dependencies:
   - ipython
   - ipywidgets
   - jupyterlab
+  - jupyterlab_code_formatter
   - matplotlib
   - numba
   - numcodecs
