--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,18 @@
 default_stages: [commit]
 repos:
--   repo: https://github.com/myint/docformatter.git
-    rev: v1.4
+-   repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+    -   id: isort
+        name: isort (python)
+-   repo: https://github.com/PyCQA/docformatter
+    rev: v1.6.1
     hooks:
     -   id: docformatter
+        additional_dependencies: [tomli]
+        args: [--in-place --config ./paulssonlab/pyproject.toml]
 -   repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 23.3.0
     hooks:
     -   id: black
 -   repo: https://github.com/pre-commit/pre-commit-hooks
