--- a/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - clustalo
   - cytoolz
   - frozendict
+  - gfapy
   - google-api-python-client
   - holoviews
   - hvplot
@@ -19,7 +20,6 @@ dependencies:
   - jsondiff
   - jupyterlab
   - jupyterlab_code_formatter
-  - libxml2=2.9.10
   - mafft
   - matplotlib
   - natsort
@@ -27,7 +27,6 @@ dependencies:
   - networkx
   - nextflow
   - nf-core
-  - nodejs
   - numpy
   - pandas
   - parasail
