Replace matplotlib with matplotlib-base (no qt dependency).

--- a/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/environment.yml
+++ b/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/environment.yml
@@ -29,7 +29,7 @@ dependencies:
   - jupyterlab_code_formatter
   - leidenalg
   - line_profiler
-  - matplotlib
+  - matplotlib-base
   - minimap2
   - nd2reader
   - networkx
