--- a/paulssonlab/src/paulssonlab/deaton/microscope/environment.yml
+++ b/paulssonlab/src/paulssonlab/deaton/microscope/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - h5py
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - numpy
   - pandas
   - pyserial
