--- a/paulssonlab/src/paulssonlab/martens/trenchcoat/environment.yml
+++ b/paulssonlab/src/paulssonlab/martens/trenchcoat/environment.yml
@@ -6,8 +6,7 @@ dependencies:
   - dask
   - ipywidgets
   - magicgui
-  - matplotlib
-  # For imwarp registration
+  - matplotlib-base
   - napari
   - numba
   - numpy
