--- a/paulssonlab/src/paulssonlab/microfluidics_design/environment.yml
+++ b/paulssonlab/src/paulssonlab/microfluidics_design/environment.yml
@@ -10,7 +10,7 @@ dependencies:
   - gdstk
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - nbformat
   - networkx
   - numpy
