--- a/paulssonlab/src/paulssonlab/projects/circuit_sim/environment.yml
+++ b/paulssonlab/src/paulssonlab/projects/circuit_sim/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - julia
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - numpy
   - pandas
   - pip
