--- a/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
@@ -21,7 +21,7 @@ dependencies:
   - jupyterlab
   - jupyterlab_code_formatter
   - mafft
-  - matplotlib
+  - matplotlib-base
   - natsort
   - nbformat
   - networkx
