--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/environment.yml
@@ -10,7 +10,7 @@ dependencies:
   - ipywidgets
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - nd2reader
   - nodejs
   - numba
