--- a/paulssonlab/src/paulssonlab/shenker/plots/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/plots/environment.yml
@@ -9,7 +9,7 @@ dependencies:
   - hvplot
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - numpy
   - pandas
   - pint
