--- a/paulssonlab/src/paulssonlab/deaton/flowcyto/environment.yml
+++ b/paulssonlab/src/paulssonlab/deaton/flowcyto/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - ipywidgets
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - nodejs
   - numpy
   - pandas
