--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/promoter_mutants/environment.yml
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/promoter_mutants/environment.yml
@@ -16,7 +16,7 @@ dependencies:
   - ipywidgets
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - nodejs
   - numpy
   - pandas
