--- a/paulssonlab/src/paulssonlab/image_analysis/environment.yml
+++ b/paulssonlab/src/paulssonlab/image_analysis/environment.yml
@@ -17,7 +17,7 @@ dependencies:
   - ipywidgets
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - numba
   - numcodecs
   - numpy
