--- a/paulssonlab/src/paulssonlab/inventory/environment.yml
+++ b/paulssonlab/src/paulssonlab/inventory/environment.yml
@@ -13,7 +13,7 @@ dependencies:
   - ipywidgets
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - nd2reader
   - nodejs
   - numpy
