--- a/paulssonlab/src/paulssonlab/nolsman/microscope/environment.yml
+++ b/paulssonlab/src/paulssonlab/nolsman/microscope/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - click
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - numpy
   - opencv
   - pandas
