--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/environment.yml
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/environment.yml
@@ -16,7 +16,7 @@ dependencies:
   - ipywidgets
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - nd2reader
   - numpy
   - pandas
