--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/environment.yml
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/environment.yml
@@ -17,7 +17,7 @@ dependencies:
   - ipywidgets
   - jupyterlab
   - jupyterlab_code_formatter
-  - matplotlib
+  - matplotlib-base
   - nd2reader
   - numpy
   - pandas
