[shenker/image_analysis] Added quotes to fira font url.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/.envrc
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/.envrc
@@ -1,7 +1,7 @@
 source_up .envrc_base
 initenv "${src}/image_analysis/environment.yml"
 if [ ! -d fira ]; then
-	curl -o fira.zip https://fonts.google.com/download?family=Fira%20Sans
+	curl -o fira.zip "https://fonts.google.com/download?family=Fira%20Sans"
 	unzip fira.zip -d fira
 	rm fira.zip
 fi
