--- a/paulssonlab/src/paulssonlab/inventory/environment.yml
+++ b/paulssonlab/src/paulssonlab/inventory/environment.yml
@@ -1,12 +1,10 @@
 name: inventory
 channels:
-  - pyviz
   - conda-forge
   - defaults
 dependencies:
   - apsw
   - bokeh
-  - cachetools
   - click
   - holoviews
   - hvplot
@@ -15,10 +13,11 @@ dependencies:
   - jupyterlab_code_formatter
   - matplotlib
   - nd2reader
-  - nodejs
   - numpy
   - pandas
   - peewee
   - python-xxhash
   - tifffile
   - tqdm
+  - zarr
+
