[image_analysis] Add isort to image_analysis env.

--- a/paulssonlab/src/paulssonlab/image_analysis/environment.yml
+++ b/paulssonlab/src/paulssonlab/image_analysis/environment.yml
@@ -16,6 +16,7 @@ dependencies:
   - hvplot
   - ipython
   - ipywidgets
+  - isort
   - jupyterlab
   - jupyterlab_code_formatter
   - matplotlib-base
