Exclude ipynb from pre-commit hooks check-added-large-files, mixed-line-ending, trailing-whitespace, end-of-file-fixer. trailing-whitespace was causing a problem, but it is safer and faster to defer to nbcleanse for all notebook formatting decisions.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,11 +13,14 @@ repos:
     rev: v4.4.0
     hooks:
     -   id: check-added-large-files
-        exclude: '\.ipynb$'
+        exclude_types: [jupyter]
     -   id: mixed-line-ending
         args: ['--fix=lf']
+        exclude_types: [jupyter]
     -   id: trailing-whitespace
+        exclude_types: [jupyter]
     -   id: end-of-file-fixer
+        exclude_types: [jupyter]
     -   id: check-merge-conflict
     -   id: check-case-conflict
 -   repo: https://github.com/shenker/pre-commit-hooks.git
