Sequencing scratchwork: read count distributions and barcode collision analysis for 230418_promrbs and 230619_repressilators.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
@@ -17,6 +17,7 @@ dependencies:
   - holoviews
   - hvplot
   - ipywidgets
+  - isort
   - jsondiff
   - jupyterlab
   - jupyterlab_code_formatter
@@ -36,8 +37,10 @@ dependencies:
       - escapejson
       - primer3plus
       - pygsheets
+      - pystream-protobuf
       - sqlalchemy-cockroachdb
   - primer3-py
+  - protobuf
   - psycopg2
   - pyppeteer
   - pytoml
