--- a/paulssonlab/src/paulssonlab/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/cloning/environment.yml
@@ -33,8 +33,10 @@ dependencies:
       - escapejson
       - primer3plus
       - pygsheets
+      - pystream-protobuf
       - sqlalchemy-cockroachdb
   - primer3-py
+  - protobuf
   - psycopg2
   - pyppeteer
   - pytoml
