Replace pip installs with bioconda packages now that bioconda supports Python 3.12.

--- a/paulssonlab/src/paulssonlab/image_analysis/environment.yml
+++ b/paulssonlab/src/paulssonlab/image_analysis/environment.yml
@@ -28,9 +28,11 @@ dependencies:
   - numpy-indexed
   - pandas
   - panel
+  - polars-u64-idx
   - py-opencv
   - pyarrow
   - pyinstrument
+  - pymc
   - scikit-image
   - scikit-learn
   - scipy
